--- a/src/ApiGateways/Statutory.Aggregator/Statutory.Aggregator.csproj
+++ b/src/ApiGateways/Statutory.Aggregator/Statutory.Aggregator.csproj
@@ -5,6 +5,7 @@
     <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <RootNamespace>Shopping.Aggregator</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
